test/corpus/attestation_blocks.txt
================================================================================
Attestation block with abstract
================================================================================

@abstract:
Declarative state contract describing what must be true.
@end

--------------------------------------------------------------------------------

(document
  (blank_line)
  (attestation_block
    (attestation_start)
    (attestation_content)
    (attestation_end)))
